SBERT regression 모델 구현

--- a/configs/han_baseline.yaml
+++ b/configs/han_baseline.yaml
@@ -9,6 +9,7 @@ DATASET:
   SIM_GT: "/data/public/rw/datasets/visual_genome/BERT_feature/bert_sim.npz"
 
 MODEL:
+  TARGET: SBERT
   BATCH_SIZE: 128
   LR: 0.0001
   NUM_MAX_HE: 100
