--- a/configs/han_sbert_tail_sampling.yaml
+++ b/configs/han_sbert_tail_sampling.yaml
@@ -10,14 +10,15 @@ DATASET:
 
 MODEL:
   TARGET: SBERT
-  BATCH_SIZE: 64
+  BATCH_SIZE: 32
   LR: 0.0001
   NUM_MAX_HE: 100
   STEP: 3
   WORD_EMB_SIZE: 300
   NUM_HIDDEN: 256
   NUM_HEAD: 8
-  TAIL_RANGE: 50
+  TAIL_RANGE: 100
+  NUM_SAMPLE_PER_RANGE: 2
 
 
 
