--- a/configs/vg_han_obj.yaml
+++ b/configs/vg_han_obj.yaml
@@ -1,15 +1,14 @@
 DATASET:
   NAME: vg_coco
-  TYPE: gen
+  TYPE: obj 
 MODEL:
   TARGET: SBERT
-  VER: 2
   BATCH_SIZE: 32
   LR: 0.0001
   NUM_MAX_HE: 100
   STEP: 3
   WORD_EMB_SIZE: 300
-  NUM_HIDDEN: 300
+  NUM_HIDDEN: 256
   NUM_HEAD: 8
   TAIL_RANGE: 100
   SAMPLE_MODE: tail_random 
