--- a/configs/f30k_han_grcnn.yaml
+++ b/configs/f30k_han_grcnn.yaml
@@ -1,6 +1,6 @@
 DATASET:
-  NAME: vg_coco
-  TYPE: gen
+  NAME: f30k 
+  TYPE: grcnn
 MODEL:
   TARGET: SBERT
   VER: 2
@@ -9,7 +9,7 @@ MODEL:
   NUM_MAX_HE: 100
   STEP: 3
   WORD_EMB_SIZE: 300
-  NUM_HIDDEN: 300
+  NUM_HIDDEN: 256
   NUM_HEAD: 8
   TAIL_RANGE: 100
   SAMPLE_MODE: tail_random 
