--- a/configs/vg_gchan.yaml
+++ b/configs/vg_gchan.yaml
@@ -1,6 +1,6 @@
 DATASET:
   NAME: vg_coco
-  TYPE: gen
+  TYPE: gen 
 MODEL:
   TARGET: SBERT
   VER: 2
@@ -13,7 +13,8 @@ MODEL:
   NUM_HEAD: 8
   TAIL_RANGE: 100
   SAMPLE_MODE: tail_random 
-  MODE: word
+  MODE: adj_he 
+  FEATURE: adj_he
 
 
 
