--- a/configs/vg_han_rank.yaml
+++ b/configs/vg_han_rank.yaml
@@ -1,19 +1,20 @@
 DATASET:
   NAME: vg_coco
-  TYPE: gen
+  TYPE: norel 
 MODEL:
-  TARGET: SBERT
-  VER: 2
+  TARGET: margin 
   BATCH_SIZE: 32
   LR: 0.0001
   NUM_MAX_HE: 100
   STEP: 3
   WORD_EMB_SIZE: 300
-  NUM_HIDDEN: 300
+  NUM_HIDDEN: 256
   NUM_HEAD: 8
   TAIL_RANGE: 100
-  SAMPLE_MODE: tail_random 
+  SAMPLE_MODE: rankV1 
   MODE: word
+  LOSS_MARGIN: 0.2
+  OUTACT: sigmoid
 
 
 
