--- a/configs/vg_hanv3_norel.yaml
+++ b/configs/vg_hanv3_norel.yaml
@@ -1,19 +1,20 @@
 DATASET:
   NAME: vg_coco
-  TYPE: gen
+  TYPE: norel 
 MODEL:
+  NAME: HGAN_V3
   TARGET: SBERT
   VER: 2
   BATCH_SIZE: 32
   LR: 0.0001
   NUM_MAX_HE: 100
   STEP: 3
+  NUM_HEAD: 8
   WORD_EMB_SIZE: 300
   NUM_HIDDEN: 300
-  NUM_HEAD: 8
   TAIL_RANGE: 100
   SAMPLE_MODE: tail_random 
-  MODE: word
+  MODE: word 
 
 
 
